--- a/src/SampleSecurityProvider/appsettings.json
+++ b/src/SampleSecurityProvider/appsettings.json
@@ -27,9 +27,9 @@
     "Jwt": {
         "Issuer": "sample-security-provider",
         "Audience": "sample-security-provider",
-        "PrivateKeyPath": "Keys/PrivateKey.xml",
-        "PublicKeyPath": "Keys/PublicKey.xml",
-        "LifetimeInSeconds": 300,
-        "RefreshTokenLifetimeInSeconds": 600
+        "PrivateKeyPath": "Security/Keys/PrivateKey.xml",
+        "PublicKeyPath": "Security/Keys/PublicKey.xml",
+        "LifetimeInSeconds": 3600,
+        "RefreshTokenLifetimeInSeconds": 604800
     }
 }
