--- a/src/SampleSecurityProvider/appsettings.json
+++ b/src/SampleSecurityProvider/appsettings.json
@@ -31,5 +31,13 @@
         "PublicKeyPath": "Security/Keys/PublicKey.xml",
         "LifetimeInSeconds": 3600,
         "RefreshTokenLifetimeInSeconds": 604800
+    },
+    
+    "Smtp": {
+        "Server": "smtp.gmail.com",
+        "Port": "587",
+        "Username": "henriquesantos.ag2@gmail.com",
+        "Password": "imsjxcowcsygldku",
+        "Sender": "henriquesantos.ag2@gmail.com"
     }
 }
