Correção para envio correto do token de recuperação de senha.

--- a/src/SampleSecurityProvider/appsettings.json
+++ b/src/SampleSecurityProvider/appsettings.json
@@ -13,7 +13,8 @@
             "Override": {
                 "Microsoft": "Error",
                 "Microsoft.Hosting": "Information",
-                "System": "Error"
+                "System": "Error",
+                "MassTransit": "Error"
             }
         },
         "WriteTo": [
