--- a/src/Runtime.Host/appsettings.json
+++ b/src/Runtime.Host/appsettings.json
@@ -26,10 +26,8 @@
     },
 
     "Jwt": {
-        "Issuer": "sample-security-provider",
-        "Audience": "sample-security-provider",
-        "PrivateKeyPath": "Security/Keys/PrivateKey.xml",
-        "PublicKeyPath": "Security/Keys/PublicKey.xml",
+        "Issuer": "auth-hub",
+        "Audience": "auth-hub",
         "LifetimeInSeconds": 3600,
         "RefreshTokenLifetimeInSeconds": 604800
     },
