Implementação do fluxo de login

--- a/src/Runtime.Host/appsettings.json
+++ b/src/Runtime.Host/appsettings.json
@@ -28,8 +28,8 @@
     "Jwt": {
         "Issuer": "auth-hub",
         "Audience": "auth-hub",
-        "LifetimeInSeconds": 3600,
-        "RefreshTokenLifetimeInSeconds": 604800
+        "LifetimeInMinutes": 60,
+        "RefreshTokenLifetimeInMinutes": 10080
     },
 
     "Smtp": {
