Implementando componente de listagem

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -21,5 +21,6 @@
         <PackageVersion Include="Swashbuckle.AspNetCore" Version="7.2.0"/>
         <PackageVersion Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0"/>
         <PackageVersion Include="MassTransit.Abstractions" Version="8.3.4" />
+        <PackageVersion Include="Bogus" Version="35.6.1" />
     </ItemGroup>
 </Project>
