--- a/src/Application/Application.csproj
+++ b/src/Application/Application.csproj
@@ -7,6 +7,7 @@
         <PackageReference Include="FluentValidation"/>
         <PackageReference Include="MediatR"/>
         <PackageReference Include="MassTransit.Abstractions"/>
+        <PackageReference Include="Bogus"/>
     </ItemGroup>
 
     <ItemGroup>
